--- a/package.json
+++ b/package.json
@@ -85,8 +85,10 @@
     "jest-junit": "~13.0.0",
     "jest-transform-graphql": "~2.1.0",
     "lodash.debounce": "~4.0.8",
+    "node-sass": "~7.0.1",
     "prettier": "~1.16.4",
     "rimraf": "~2.6.3",
+    "sass-loader": "10.1.1",
     "tailwindcss": "~2.2.7"
   },
   "optionalDependencies": {
