--- a/packages/venia-concept/upward.yml
+++ b/packages/venia-concept/upward.yml
@@ -1,19 +1,103 @@
-# This is the UPWARD specification file for the Venia storefront.
-# It is used by an UPWARD server implementation, such as upward-js and
-# upward-php, to describe how the server responds to requests.
-# See: https://pwastudio.io/technologies/upward/
-
-# The root properties of an UPWARD spec file are part of a global context
-# that includes request and environment data.
-# These properties are available to other properties and are ultimately
-# populated with Resolvers.
-
-# The root 'status', 'headers', and 'body' properties are required properties
-# in an UPWARD spec file.
-# An UPWARD server uses the resolved values of these properties to create an
-# HTTP response to the client.
-# In this file, these properties get their values from a top-level
-# 'response' object, which is a recommended and best practice approach.
+veniaResponse:
+  resolver: conditional
+  when:
+    - matches: request.url.pathname
+      pattern: ^/(graphql|rest|media)(/|$)
+      use: veniaProxy
+    - matches: request.url.pathname
+      pattern: ^/(robots\.txt|favicon\.ico|manifest\.json)
+      use: staticFromRoot
+    - matches: fileExtension
+      pattern: (js|json|png|jpg|gif|svg|ico|css|txt|ttf)
+      use: veniaStatic
+  default: veniaAppShell
+staticFromRoot:
+  inline:
+    status: 200
+    headers:
+      resolver: inline
+      inline:
+        content-type: contentTypeFromExtension
+    body:
+      resolver: file
+      parse:
+        inline: text
+      encoding:
+        inline: binary
+      file:
+        resolver: template
+        engine: mustache
+        provide:
+          filename: request.url.pathname
+        template:
+          resolver: inline
+          inline: './venia-static{{ filename }}'
+contentTypeFromExtension:
+  when:
+    - matches: fileExtension
+      pattern: ^ico$
+      use:
+        inline: image/x-icon
+    - matches: fileExtension
+      pattern: ^txt$
+      use:
+        inline: text/plain
+    - matches: fileExtension
+      pattern: ^json$
+      use:
+        inline: application/json
+  default:
+    inline: text/html
+fileExtension:
+  resolver: conditional
+  when:
+    - matches: request.url.pathname
+      pattern: \.(.*)$
+      use: $match.$1
+  default:
+    inline: ''
+veniaProxy:
+  resolver: proxy
+  target: env.MAGENTO_BACKEND_URL
+  ignoreSSLErrors:
+    when:
+      - matches: env.NODE_ENV
+        pattern: production
+        use:
+          inline: false
+    default:
+      inline: true
+veniaAppShell:
+  resolver: inline
+  inline:
+    status:
+      resolver: inline
+      inline: 200
+    headers:
+      resolver: inline
+      inline:
+        content-type:
+          inline: text/html
+    body:
+      resolver: file
+      file:
+        resolver: inline
+        inline: ./index.html
+veniaStatic:
+  resolver: directory
+  directory:
+    resolver: inline
+    inline: .
+veniaTemplateIncludes:
+  resolver: directory
+  directory:
+    resolver: inline
+    inline: ./templates
+veniaStaticIncludes:
+  resolver: directory
+  directory:
+    resolver: inline
+    inline: ./venia-static
 status: veniaResponse.status
 headers: veniaResponse.headers
 body: veniaResponse.body
