--- a/package.json
+++ b/package.json
@@ -46,7 +46,15 @@
     "watch:venia": "yarn venia run watch"
   },
   "dependencies": {
-    "caniuse-lite": "~1.0.30001335"
+    "@fortawesome/fontawesome-svg-core": "~6.1.2",
+    "@fortawesome/free-brands-svg-icons": "~6.1.2",
+    "@fortawesome/react-fontawesome": "~0.2.0",
+    "camelspace": "^2.0.0",
+    "caniuse-lite": "~1.0.30001335",
+    "devcert": "^1.2.2",
+    "envalid": "^7.3.1",
+    "is-promise": "^4.0.0",
+    "pkg-dir": "^7.0.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "~7.4.4",
