--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "devcert": "^1.2.2",
     "envalid": "^7.3.1",
     "is-promise": "^4.0.0",
-    "pkg-dir": "^7.0.0"
+    "pkg-dir": "^7.0.0",
+    "swiper": "~8.3.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "~7.4.4",
