--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "~6.1.2",
     "@fortawesome/free-brands-svg-icons": "~6.1.2",
+    "@fortawesome/free-solid-svg-icons": "~6.1.2",
     "@fortawesome/react-fontawesome": "~0.2.0",
+    "body-scroll-lock": "~4.0.0-beta.0",
     "camelspace": "^2.0.0",
     "caniuse-lite": "~1.0.30001335",
     "devcert": "^1.2.2",
